# ledgeroptima-transaction-mesh

./: .env  .gitignore_updated  ANALYTICS_DEPLOYMENT.txt  BUILD_REPORT.md  DEPLOYMENT.md  Dockerfile  MANIFEST.md  PRODUCTION_DEPLOYMENT.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  START_HERE.txt  docker-compose.yml  pyproject.toml  requirements.txt
app/: anomaly_detection.py  background_tasks.py  config.py  data_generator.py  database.py  main.py  models.py  schemas.py
app/routes/: merchants.py  system.py  transactions.py
scripts/: init_db.py
static/css/: style.css
static/js/: dashboard.js
templates/: index.html
